$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.90-1 (opened July 3, 2011)

	* betadiver: argument 'index' was renamed to 'method' for
	compatibility with dist() objects. Argument 'index' is
	still recognized with a warning.

	* metaMDS: Documentation and interface adapted to monoMDS().
	Argument 'noshare' defaults to FALSE with monoMDS(), since tie
	breaking seem to handle tied maximum dissimilarities even better
	than stepacross(). For 'engine = "monoMDS"' 'noshare' defaults to
	TRUE. The 'noshare' argument now accepts logical arguments in
	addition to old numeric (FALSE worked previously because it was
	interpreted as numeric 0, but TRUE has now meaningful
	interpretation). Remove argument 'old.wa' introduced in rev280 on
	24/3/08 for backward compatibility when calculating WA scores
	started to use the same transformed data as analysed.
	 
Version 1.90-0 (closed July 3, 2011)

	* vegan now depends on the permute package for new permutation
	designs. This initially version strips out all the old "new"
	permutation code from the R and Rd files, and patches up
	permutest.betadisper to use shuffle() to generate permutations.

	The 1.90-0 devel series will lead the way to vegan 2.0-0. There
	may well be build problems as we iron out permute / vegan
	meshing.

	* capscale: could not be embedded in another function after fixing
	the update() in 1.18-31 -- problems were anticipated in ChangeLog,
	and they were realized.

	* monoMDS: text for a proper help (Rd file). Other help files
	updated for monoMDS. Stress type 2 is printed both in monoMDS and
	metaMDS. stressplot() prints now R2 for monoMDS() results, and
	docs tell that "linear fit" of stressplot() is related to "stress
	2".

Version 1.18-33 (closed June 21, 2011)

	* adonis: made faster (much faster in tests) by polishing the
	f.test() in the innermost loop.

Version 1.18-32 (closed June 14, 2011)

	* closed with the release of vegan_1.17-11.
